--- a/Lab02/Lab02.css
+++ b/Lab02/Lab02.css
@@ -142,6 +142,8 @@ footer {
   margin: 5rem auto;
   color: rgb(253, 197, 132);
   padding: 1rem 2rem;
+  background-color: rgb(0, 58, 66);
+  border-radius: 1rem;
 }
 .top-places-div h2 {
   text-align: center;
@@ -159,6 +161,8 @@ footer {
 
 @media only screen and (max-width: 1100px) {
   .tips-div {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 }
 
