Got rid of red border

--- a/Lab02/Lab02.css
+++ b/Lab02/Lab02.css
@@ -58,9 +58,9 @@ of the elements on the page can help fix issues with spacing too, especially if 
 /* ---UNIVERSAL SELECTOR--- */
 /* OPTIONAL ↓ REMOVE COMMENTS TO SEE RED BORDER:*/
 
-* {
-  /* border: 1px solid red; */
-}
+/* * {
+  border: 1px solid red;
+} */
 
 /* ---ELEMENT SELECTORS--- */
 
